--- a/DMSDriver/DMSDriver/Resources/Storyboards/ReturnedItem.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/ReturnedItem.storyboard
@@ -362,7 +362,7 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" red="0.8980392157" green="0.8980392157" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="rX6-XF-Nen">
-                                    <rect key="frame" x="0.0" y="611.5" width="375" height="45"/>
+                                    <rect key="frame" x="0.0" y="426.5" width="375" height="45"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="5St-Ks-Tbd">
@@ -592,39 +592,27 @@
                                             <outlet property="nameLabel" destination="m4j-Gm-bIq" id="21I-kX-IBn"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="LoadPackageTableViewCell" rowHeight="250" id="oy1-LF-VW3" customClass="LoadPackageTableViewCell" customModule="Ashdod_Dev" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="343.5" width="375" height="250"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReturnedItemQuantityCell" rowHeight="65" id="oy1-LF-VW3" customClass="ReturnedItemQuantityCell" customModule="Ashdod_Dev" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="343.5" width="375" height="65"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oy1-LF-VW3" id="bDF-Bf-EQg">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="250"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oy1-LF-VW3" id="bDF-Bf-EQg">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="65"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pK3-t2-Jdf">
+                                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pK3-t2-Jdf">
                                                     <rect key="frame" x="15" y="0.0" width="345" height="250"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Package" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0lK-Y3-dJP">
-                                                            <rect key="frame" x="15" y="15" width="54.5" height="16"/>
-                                                            <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
-                                                            <color key="textColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
-                                                            <nil key="highlightedColor"/>
-                                                            <userDefinedRuntimeAttributes>
-                                                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="package"/>
-                                                            </userDefinedRuntimeAttributes>
-                                                        </label>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vfd-NN-Tag">
-                                                            <rect key="frame" x="15" y="41" width="310" height="50"/>
+                                                            <rect key="frame" x="15" y="8" width="310" height="50"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Quantity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5KP-Ka-DRE">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="52.5" height="16"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Total Quantity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5KP-Ka-DRE">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="86" height="16"/>
                                                                     <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                                                     <color key="textColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <nil key="highlightedColor"/>
-                                                                    <userDefinedRuntimeAttributes>
-                                                                        <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="quantity"/>
-                                                                    </userDefinedRuntimeAttributes>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xHF-xs-C8i">
-                                                                    <rect key="frame" x="62.5" y="-3" width="247.5" height="22"/>
+                                                                    <rect key="frame" x="96" y="-3" width="214" height="22"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="yOu-Fc-RDD"/>
                                                                     </constraints>
@@ -632,8 +620,8 @@
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Loaded Quantity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7AI-52-Gif">
-                                                                    <rect key="frame" x="0.0" y="28" width="103" height="16"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Returned Quantity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7AI-52-Gif">
+                                                                    <rect key="frame" x="0.0" y="28" width="114" height="16"/>
                                                                     <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                                                     <color key="textColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <nil key="highlightedColor"/>
@@ -663,38 +651,24 @@
                                                                 <constraint firstItem="xHF-xs-C8i" firstAttribute="leading" secondItem="5KP-Ka-DRE" secondAttribute="trailing" constant="10" id="qxZ-Sw-Ivg"/>
                                                             </constraints>
                                                         </view>
-                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vXC-TN-3vj">
+                                                        <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vXC-TN-3vj">
                                                             <rect key="frame" x="5" y="249" width="335" height="1"/>
                                                             <color key="backgroundColor" red="0.8980392157" green="0.8980392157" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="1" id="GWn-1j-94g"/>
                                                             </constraints>
                                                         </view>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rVW-3Z-dhW">
-                                                            <rect key="frame" x="79.5" y="12" width="245.5" height="22"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="ax9-7V-7C6"/>
-                                                            </constraints>
-                                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
+                                                        <constraint firstAttribute="trailing" secondItem="vfd-NN-Tag" secondAttribute="trailing" constant="20" id="4Sy-h5-nua"/>
                                                         <constraint firstAttribute="trailing" secondItem="vXC-TN-3vj" secondAttribute="trailing" constant="5" id="A2t-aD-uPp"/>
-                                                        <constraint firstItem="vfd-NN-Tag" firstAttribute="top" secondItem="0lK-Y3-dJP" secondAttribute="bottom" constant="10" id="ByK-Pt-qXW"/>
-                                                        <constraint firstItem="vfd-NN-Tag" firstAttribute="leading" secondItem="0lK-Y3-dJP" secondAttribute="leading" id="EKH-J6-b7a"/>
-                                                        <constraint firstItem="vfd-NN-Tag" firstAttribute="trailing" secondItem="rVW-3Z-dhW" secondAttribute="trailing" id="Gdd-mC-xjo"/>
-                                                        <constraint firstAttribute="trailing" secondItem="rVW-3Z-dhW" secondAttribute="trailing" constant="20" id="MRk-yU-ReW"/>
-                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="100" id="NkK-TR-QD9"/>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="65" id="NkK-TR-QD9"/>
                                                         <constraint firstItem="vXC-TN-3vj" firstAttribute="top" relation="greaterThanOrEqual" secondItem="vfd-NN-Tag" secondAttribute="bottom" constant="10" id="U1M-rA-ajy"/>
                                                         <constraint firstItem="vXC-TN-3vj" firstAttribute="leading" secondItem="pK3-t2-Jdf" secondAttribute="leading" constant="5" id="bwT-1e-Nun"/>
-                                                        <constraint firstItem="0lK-Y3-dJP" firstAttribute="leading" secondItem="pK3-t2-Jdf" secondAttribute="leading" constant="15" id="gNu-wZ-8vz"/>
-                                                        <constraint firstItem="rVW-3Z-dhW" firstAttribute="centerY" secondItem="0lK-Y3-dJP" secondAttribute="centerY" id="hMo-CO-NSk"/>
-                                                        <constraint firstItem="0lK-Y3-dJP" firstAttribute="top" secondItem="pK3-t2-Jdf" secondAttribute="top" constant="15" id="lDI-rf-OeG"/>
-                                                        <constraint firstItem="rVW-3Z-dhW" firstAttribute="leading" secondItem="0lK-Y3-dJP" secondAttribute="trailing" constant="10" id="lXY-YY-W8k"/>
+                                                        <constraint firstItem="vfd-NN-Tag" firstAttribute="leading" secondItem="pK3-t2-Jdf" secondAttribute="leading" constant="15" id="nrl-N1-A4j"/>
                                                         <constraint firstAttribute="bottom" secondItem="vXC-TN-3vj" secondAttribute="bottom" id="qIn-76-q8g"/>
+                                                        <constraint firstItem="vfd-NN-Tag" firstAttribute="top" secondItem="pK3-t2-Jdf" secondAttribute="top" constant="8" id="yUN-FS-cUa"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
@@ -710,7 +684,6 @@
                                         <connections>
                                             <outlet property="actualQuantityTextField" destination="xV6-vb-wZh" id="ayL-xh-4Nb"/>
                                             <outlet property="deliveredQtyStaticLabel" destination="7AI-52-Gif" id="lil-Wl-vme"/>
-                                            <outlet property="packageNameLabel" destination="rVW-3Z-dhW" id="xLD-hB-1Ha"/>
                                             <outlet property="palletsViewContainerHeightConstraint" destination="qdx-a1-cIj" id="DOt-6e-13E"/>
                                             <outlet property="quantityLabel" destination="xHF-xs-C8i" id="0UP-38-QHZ"/>
                                             <outlet property="vContent" destination="pK3-t2-Jdf" id="MtJ-TF-hlm"/>
