--- a/DMSDriver/DMSDriver/Resources/Storyboards/ReturnedItem.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/ReturnedItem.storyboard
@@ -140,7 +140,7 @@
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Urgency" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zIT-8r-Ind">
+                                                                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Urgency" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zIT-8r-Ind">
                                                                     <rect key="frame" x="283.5" y="14.5" width="52.5" height="16"/>
                                                                     <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                                                     <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -387,6 +387,9 @@
                                                             <real key="value" value="1"/>
                                                         </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
+                                                    <connections>
+                                                        <action selector="onRejectButtonTouchUp:" destination="j4x-t3-HQl" eventType="touchUpInside" id="eqH-zU-WLR"/>
+                                                    </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HlH-RZ-Nil">
                                                     <rect key="frame" x="121.5" y="0.0" width="116" height="45"/>
@@ -401,6 +404,9 @@
                                                         </userDefinedRuntimeAttribute>
                                                         <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="cancel"/>
                                                     </userDefinedRuntimeAttributes>
+                                                    <connections>
+                                                        <action selector="onCancelButtonTouchUp:" destination="j4x-t3-HQl" eventType="touchUpInside" id="asY-UQ-RLh"/>
+                                                    </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mez-Lp-NMz">
                                                     <rect key="frame" x="242.5" y="0.0" width="116.5" height="45"/>
@@ -415,6 +421,9 @@
                                                         </userDefinedRuntimeAttribute>
                                                         <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="Finish"/>
                                                     </userDefinedRuntimeAttributes>
+                                                    <connections>
+                                                        <action selector="onFinishButtonTouchUp:" destination="j4x-t3-HQl" eventType="touchUpInside" id="Sxg-SN-3yu"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                         </stackView>
@@ -595,15 +604,15 @@
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReturnedItemQuantityCell" rowHeight="65" id="oy1-LF-VW3" customClass="ReturnedItemQuantityCell" customModule="Ashdod_Dev" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="343.5" width="375" height="65"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oy1-LF-VW3" id="bDF-Bf-EQg">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oy1-LF-VW3" id="bDF-Bf-EQg">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="65"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pK3-t2-Jdf">
-                                                    <rect key="frame" x="15" y="0.0" width="345" height="250"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pK3-t2-Jdf">
+                                                    <rect key="frame" x="15" y="0.0" width="345" height="65"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vfd-NN-Tag">
-                                                            <rect key="frame" x="15" y="8" width="310" height="50"/>
+                                                            <rect key="frame" x="15" y="8" width="310" height="22"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Total Quantity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5KP-Ka-DRE">
                                                                     <rect key="frame" x="0.0" y="0.0" width="86" height="16"/>
@@ -620,13 +629,13 @@
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Returned Quantity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7AI-52-Gif">
+                                                                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Returned Quantity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7AI-52-Gif">
                                                                     <rect key="frame" x="0.0" y="28" width="114" height="16"/>
                                                                     <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                                                     <color key="textColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xV6-vb-wZh">
+                                                                <textField hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xV6-vb-wZh">
                                                                     <rect key="frame" x="217" y="23" width="100" height="26"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="26" id="Joy-iq-MH0"/>
@@ -647,12 +656,12 @@
                                                                 <constraint firstItem="7AI-52-Gif" firstAttribute="top" secondItem="5KP-Ka-DRE" secondAttribute="bottom" constant="12" id="aH8-xr-TZJ"/>
                                                                 <constraint firstItem="7AI-52-Gif" firstAttribute="leading" secondItem="5KP-Ka-DRE" secondAttribute="leading" id="bxt-BP-QI5"/>
                                                                 <constraint firstItem="5KP-Ka-DRE" firstAttribute="top" secondItem="vfd-NN-Tag" secondAttribute="top" id="kgo-KQ-ZAY"/>
-                                                                <constraint firstAttribute="height" constant="50" id="qdx-a1-cIj"/>
+                                                                <constraint firstAttribute="height" constant="22" id="qdx-a1-cIj"/>
                                                                 <constraint firstItem="xHF-xs-C8i" firstAttribute="leading" secondItem="5KP-Ka-DRE" secondAttribute="trailing" constant="10" id="qxZ-Sw-Ivg"/>
                                                             </constraints>
                                                         </view>
-                                                        <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vXC-TN-3vj">
-                                                            <rect key="frame" x="5" y="249" width="335" height="1"/>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vXC-TN-3vj">
+                                                            <rect key="frame" x="5" y="64" width="335" height="1"/>
                                                             <color key="backgroundColor" red="0.8980392157" green="0.8980392157" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="1" id="GWn-1j-94g"/>
@@ -663,7 +672,7 @@
                                                     <constraints>
                                                         <constraint firstAttribute="trailing" secondItem="vfd-NN-Tag" secondAttribute="trailing" constant="20" id="4Sy-h5-nua"/>
                                                         <constraint firstAttribute="trailing" secondItem="vXC-TN-3vj" secondAttribute="trailing" constant="5" id="A2t-aD-uPp"/>
-                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="65" id="NkK-TR-QD9"/>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="NkK-TR-QD9"/>
                                                         <constraint firstItem="vXC-TN-3vj" firstAttribute="top" relation="greaterThanOrEqual" secondItem="vfd-NN-Tag" secondAttribute="bottom" constant="10" id="U1M-rA-ajy"/>
                                                         <constraint firstItem="vXC-TN-3vj" firstAttribute="leading" secondItem="pK3-t2-Jdf" secondAttribute="leading" constant="5" id="bwT-1e-Nun"/>
                                                         <constraint firstItem="vfd-NN-Tag" firstAttribute="leading" secondItem="pK3-t2-Jdf" secondAttribute="leading" constant="15" id="nrl-N1-A4j"/>
