--- a/DMSDriver/DMSDriver/Resources/Storyboards/ReturnedItem.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/ReturnedItem.storyboard
@@ -667,10 +667,10 @@
                                                             </constraints>
                                                         </view>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vXC-TN-3vj">
-                                                            <rect key="frame" x="5" y="64" width="335" height="1"/>
+                                                            <rect key="frame" x="5" y="65" width="335" height="0.0"/>
                                                             <color key="backgroundColor" red="0.8980392157" green="0.8980392157" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="1" id="GWn-1j-94g"/>
+                                                                <constraint firstAttribute="height" id="GWn-1j-94g"/>
                                                             </constraints>
                                                         </view>
                                                     </subviews>
