--- a/DMSDriver/DMSDriver/Resources/Storyboards/Route.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Route.storyboard
@@ -1827,7 +1827,7 @@
                                                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dvF-SK-gtI">
                                                                                                         <rect key="frame" x="124.5" y="98" width="225.5" height="22"/>
                                                                                                         <constraints>
-                                                                                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="22" id="SDo-hn-uvK"/>
+                                                                                                            <constraint firstAttribute="height" constant="22" id="SDo-hn-uvK"/>
                                                                                                         </constraints>
                                                                                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                                                                                         <nil key="textColor"/>
@@ -1989,6 +1989,7 @@
                                                                             <connections>
                                                                                 <outlet property="btnPropety" destination="GzD-pW-ZzD" id="FCU-LX-yHq"/>
                                                                                 <outlet property="btnStatus" destination="W9O-Fh-LDo" id="lGD-GX-sLN"/>
+                                                                                <outlet property="lblCartonInPallets" destination="e0t-SE-1vR" id="4dX-xO-r0J"/>
                                                                                 <outlet property="lblConsigneeName" destination="77F-LO-bWN" id="De1-pE-fhF"/>
                                                                                 <outlet property="lblCustomerName" destination="ChR-uf-0KB" id="6G9-7C-hWj"/>
                                                                                 <outlet property="lblDate" destination="GJO-I0-yI7" id="31a-dE-6Kn"/>
@@ -1996,6 +1997,8 @@
                                                                                 <outlet property="lblFromAddresss" destination="djw-Xd-Mc5" id="YOv-Hg-sSC"/>
                                                                                 <outlet property="lblNumber" destination="eVA-JM-pyb" id="r0m-vS-yhL"/>
                                                                                 <outlet property="lblPallet" destination="dvF-SK-gtI" id="pSI-as-387"/>
+                                                                                <outlet property="lblPalletHeightConstraint" destination="SDo-hn-uvK" id="v6P-62-0VX"/>
+                                                                                <outlet property="lblPalletTopConstraint" destination="iEM-K3-Ouf" id="c9c-gS-og5"/>
                                                                                 <outlet property="lblQuantity" destination="oXU-nJ-Df9" id="0gm-Xm-Xdu"/>
                                                                                 <outlet property="lblTitle" destination="g1S-sZ-bhH" id="cdT-6H-rgq"/>
                                                                                 <outlet property="lblToAddress" destination="EXX-zt-K42" id="lnl-oe-8wm"/>
